# kantui

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  plan.md
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/core/src/domain/: history.rs  ids.rs  mod.rs  project.rs  state.rs  tag.rs  task.rs  time.rs
crates/core/src/ports/: clock.rs  id_gen.rs  mod.rs  project_repo.rs  tag_repo.rs  task_repo.rs
crates/core/src/services/: mod.rs  position.rs  project_service.rs  stats_service.rs  tag_service.rs  task_service.rs
crates/core/tests/: project_service.rs  tag_service.rs  task_service.rs
crates/core/tests/fakes/: clock.rs  id_gen.rs  mod.rs  project_repo.rs  tag_repo.rs  task_repo.rs
crates/kantui/: Cargo.toml
crates/kantui/src/: action.rs  app.rs  cli.rs  config.rs  controller.rs  event.rs  jump.rs  keybinds.rs  keymap.rs  lib.rs  logging.rs  main.rs  state.rs  tui.rs  view.rs
crates/kantui/tests/: e2e.rs
crates/store/: Cargo.toml
crates/store/migrations/sqlite/: 001_initial.sql
crates/store/src/: clock.rs  id.rs  lib.rs  mapping.rs
crates/store/src/sqlite/: mod.rs  project_repo.rs  tag_repo.rs  task_repo.rs
crates/store/tests/: sqlite_contract.rs
crates/widgets/: Cargo.toml
crates/widgets/src/: board.rs  chord_help.rs  dashboard.rs  help.rs  input.rs  jump_labels.rs  lib.rs  project_editor.rs  project_picker.rs  state_column.rs  status_bar.rs  task_card.rs  task_detail.rs  theme.rs  view.rs
crates/widgets/tests/: snapshots.rs
crates/widgets/tests/snapshots/: snapshots__board_view_two_columns.snap  snapshots__input_with_prompt.snap  snapshots__state_column_with_selection.snap  snapshots__status_bar_insert.snap  snapshots__status_bar_normal.snap  snapshots__task_card_selected_with_tags.snap  snapshots__task_card_unselected_no_due_date.snap
