[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/store",
    "crates/widgets",
    "crates/kantui",
]

[workspace.package]
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
authors      = ["Denis Rodin <denis.rodin@proton.me>"]
description  = "Terminal kanban board with Vim-inspired modal control."
keywords     = ["tui", "kanban", "productivity", "ratatui", "terminal"]
categories   = ["command-line-utilities"]

[workspace.dependencies]
# core: only async-trait — everything else is for adapters / binary.
async-trait        = "0.1"
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
thiserror          = "2"
uuid               = { version = "1", features = ["v4"] }
serde              = { version = "1", features = ["derive"] }
sqlx               = { version = "0.8", features = ["runtime-tokio", "macros"] }
ratatui            = "0.28"
crossterm          = "0.28"
clap               = { version = "4", features = ["derive"] }
directories        = "5"
toml               = "0.8"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
