[package]
name = "kantui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "kantui"
path = "src/main.rs"

[dependencies]
kantui-core    = { path = "../core" }
kantui-store   = { path = "../store" }
kantui-widgets = { path = "../widgets" }
ratatui            = { workspace = true }
crossterm          = { workspace = true }
tokio              = { workspace = true }
clap               = { workspace = true }
directories        = { workspace = true }
toml               = { workspace = true }
serde              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
uuid               = { workspace = true }
